VIH-8202 hearing style issues (#1562)
* Judge context menu display in correct place

* Miscellaneous style issues

* Override y scroll

* temporary header scroll bar

* padding for dropdown

* Using inner width instead of outer for tooltip

* removing console logs

* tooltips in lower half of screen appear above

* Increasing padding

* prettier

* Unit testing updatePosition

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/judge-context-menu/judge-context-menu.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/judge-context-menu/judge-context-menu.component.scss
@@ -1,5 +1,9 @@
 @import '~govuk-frontend/govuk/base';
 
+:host {
+  position: relative;
+}
+
 .panel-icon {
   width: 24px;
   cursor: pointer;
